--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 			</section>
 
 			<section id="popularity">
+				<h2>Opening Popularity</h2>
+				<div id="popularity_chart"></div>
+				<iframe
+					src="popu_visu2.html"
+					style="border: none; width: 100%; height: 300px" ></iframe>
 			</section>
 
 			<section id="accuracy">
