--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="css/style.css" />
 
 		<script src="https://d3js.org/d3.v7.min.js"></script>
-		<script src="js/script.js" defer></script>
+		<script src="js/script.js" type="module" defer></script>
 	</head>
 
 	<body>
@@ -39,11 +39,6 @@
 			</section>
 
 			<section id="popularity">
-				<h2>Opening Popularity</h2>
-				<div id="popularity_chart"></div>
-				<iframe
-					src="popu_visu2.html"
-					style="border: none; width: 100%; height: 300px" ></iframe>
 			</section>
 
 			<section id="accuracy">
