--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 		<script src="https://d3js.org/d3.v7.min.js"></script>
 		<script src="js/script.js" defer></script>
+		<script src="js/HeatMap.js" defer></script>
 	</head>
 
 	<body>
@@ -25,11 +26,10 @@
 				</select>
 				<label for="elo">Elo Range:</label>
 				<select id="elo">
-					<option value="0_500">0-500</option>
-					<option value="500_1000">500-1000</option>
-					<option value="1000_1500">1000-1500</option>
-					<option value="1500_2000">1500-2000</option>
-					<option value="2000">2000+</option>
+					<option value="500-1000">500-1000</option>
+					<option value="1000-1500">1000-1500</option>
+					<option value="1500-2000">1500-2000</option>
+					<option value="2000+">2000+</option>
 				</select>
 			</nav>
 		</header>
@@ -47,6 +47,9 @@
 			</section>
 
 			<section id="accuracy">
+				<h1 class="HeatMapTitle">HeatMap de Taux de Victoire</h1>
+				<div id="HeatMap"></div>
+				<div id="tooltip"></div>
 			</section>
 		</main>
 
