--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<option value="All">All</option>
 							<option value="Sicilian Defense">Sicilian Defense</option>
 							<option value="French Defense">French Defense</option>
-							<option value="Caro Kann Defense">Caro-Kann Defense</option>
+							<option value="Caro-Kann Defense">Caro-Kann Defense</option>
 							<option value="Scandinavian Defense">Scandinavian Defense</option>
 							<option value="Alekhine Defense">Alekhine Defense</option>
 							<option value="Pirc Defense">Pirc Defense</option>
@@ -68,10 +68,10 @@
 							<option value="English Opening">English Opening</option>
 							<option value="Queen's Gambit">Queen's Gambit</option>
 							<option value="Slav Defense">Slav Defense</option>
-							<option value="Semi Slav Defense">Semi-Slav Defense</option>
-							<option value="Nimzo Indian Defense">Nimzo-Indian Defense</option>
+							<option value="Semi-Slav Defense">Semi-Slav Defense</option>
+							<option value="Nimzo-Indian Defense">Nimzo-Indian Defense</option>
 							<option value="Queen's Indian Defense">Queen's Indian Defense</option>
-							<option value="Bogo Indian Defense">Bogo-Indian Defense</option>
+							<option value="Bogo-Indian Defense">Bogo-Indian Defense</option>
 							<option value="King's Indian Defense">King's Indian Defense</option>
 							<option value="Grunfeld Defense">Grünfeld Defense</option>
 							<option value="Benoni Defense">Benoni Defense</option>
