--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<nav>
 				<div>
 					<div>
-						<label for="time_control">Time Control:</label>
+						<label for="time_control">Time Control</label>
 						<select id="time_control">
 							<option value="rapid">Rapid</option>
 							<option value="blitz">Blitz</option>
@@ -28,16 +28,16 @@
 						</select>
 					</div>
 					<div>
-						<label for="elo">Elo Range:</label>
+						<label for="elo">Elo Range</label>
 						<select id="elo">
 							<option value="500-1000">500-1000</option>
 							<option value="1000-1500">1000-1500</option>
-							<option value="1500-2000">1500-2000</option>
+							<option value="1500-2000" selected>1500-2000</option>
 							<option value="2000+">2000+</option>
 						</select>
 					</div>
 					<div>
-						<label for="color">Color:</label>
+						<label for="color">Color</label>
 						<select id="color">
 							<option value="0">Both</option>
 							<option value="1">White</option>
@@ -45,7 +45,7 @@
 						</select>
 					</div>
 					<div>
-						<label for="opening">Opening:</label>
+						<label for="opening">Opening</label>
 						<select id="opening">
 							<option value="All">All</option>
 							<option value="Sicilian Defense">Sicilian Defense</option>
