Fixed accent in opening name Removed other category in popularity builder Removed "both" filter : only white/black

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<div>
 						<label for="color">Color</label>
 						<select id="color">
-							<option value="0">Both</option>
+							<!-- <option value="0">Both</option> -->
 							<option value="1">White</option>
 							<option value="2">Black</option>
 						</select>
@@ -72,12 +72,11 @@
 							<option value="Queen's Indian Defense">Queen's Indian Defense</option>
 							<option value="Bogo-Indian Defense">Bogo-Indian Defense</option>
 							<option value="King's Indian Defense">King's Indian Defense</option>
-							<option value="Grunfeld Defense">Grünfeld Defense</option>
 							<option value="Benoni Defense">Benoni Defense</option>
 							<option value="Benko Gambit">Benko Gambit</option>
 							<option value="London System">London System</option>
 							<option value="Catalan Opening">Catalan Opening</option>
-							<option value="Réti Opening">Réti Opening</option>
+							<option value="Reti Opening">Réti Opening</option>
 							<option value="Bird Opening">Bird Opening</option>
 							<option value="Polish Opening">Polish Opening</option>
 							<option value="Owen Defense">Owen Defense</option>
