Add top menu navigation links to index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 	<header>
 		<h1>Chess Opening Visualization</h1>
 		<nav>
+			<div class="top-menu">
+    <a href="index.html">Visualisation</a>
+    <a href="about.html">Contexte</a>
+    <a href="data.html">Données</a>
+    <a href="story.html">Storytelling</a>
+</div>
+
 			<div>
 				<div>
 					<label for="time_control">Time Control</label>
