Refactor layout and structure of opening explorer and chessboard sections in HTML and CSS

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 	<header>
 		<h1>Chess Opening Visualization</h1>
 		<nav>
-			<div class="top-menu">
-    <a href="index.html">Visualisation</a>
-    <a href="about.html">Contexte</a>
-    <a href="data.html">Données</a>
-    <a href="story.html">Storytelling</a>
-</div>
+			<!-- <div class="top-menu">
+				<a href="index.html">Visualisation</a>
+				<a href="about.html">Contexte</a>
+				<a href="data.html">Données</a>
+				<a href="story.html">Storytelling</a>
+			</div> -->
 
 			<div>
 				<div>
@@ -104,16 +104,17 @@
 		<section id="opening_explorer">
 		</section>
 
-		<section id="popularity"></section>
-
 		<section id="chessboard">
 			<div id="oe-board" class="cbw-board"></div>
-
-			<div class="oe-actions">
-				<button id="oe-reset" type="button" class="oe-btn">Reset</button>
-				<button id="oe-flip" type="button" class="oe-btn">Flip</button>
-			</div>
 		</section>
+
+		<section id="details">
+			<p></p>
+			<button id="oe-reset" type="button" class="oe-btn">Reset</button>
+			<button id="oe-flip" type="button" class="oe-btn">Flip</button>
+		</section>
+
+		<section id="popularity"></section>
 
 		<section id="accuracy"></section>
 	</main>
