--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
 	<header>
 		<h1>Chess Opening Visualization</h1>
 		<nav>
-			<!-- <div class="top-menu">
+			<div class="top-menu">
 				<a href="index.html">Visualisation</a>
 				<a href="about.html">Contexte</a>
-				<a href="data.html">Données</a>
-				<a href="story.html">Storytelling</a>
-			</div> -->
+			</div> 
 
 			<div>
 				<div>
