Uniformisation between the two html pages

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 	<header>
-		<h1>Chess Opening Visualization</h1>
+		<h1><a href="/">Chess Opening Visualization</a></h1>
 		<nav>
 			<div class="filter-bar">
 				<div class="filter-group">
