--- a/index.html
+++ b/index.html
@@ -49,43 +49,43 @@
 					<label for="opening">Opening</label>
 					<select id="opening">
 						<option value="All">All</option>
-						<option value="Sicilian Defense">Sicilian Defense</option>
-						<option value="French Defense">French Defense</option>
-						<option value="Caro-Kann Defense">Caro-Kann Defense</option>
-						<option value="Scandinavian Defense">Scandinavian Defense</option>
 						<option value="Alekhine Defense">Alekhine Defense</option>
-						<option value="Pirc Defense">Pirc Defense</option>
-						<option value="Modern Defense">Modern Defense</option>
-						<option value="Dutch Defense">Dutch Defense</option>
-						<option value="Philidor Defense">Philidor Defense</option>
-						<option value="Petrov's Defense">Petrov's Defense</option>
-						<option value="Italian Game">Italian Game</option>
-						<option value="Ruy Lopez">Ruy Lopez</option>
-						<option value="Scotch Game">Scotch Game</option>
-						<option value="Four Knights Game">Four Knights Game</option>
-						<option value="Vienna Game">Vienna Game</option>
-						<option value="King's Gambit">King's Gambit</option>
-						<option value="English Opening">English Opening</option>
-						<option value="Queen's Gambit">Queen's Gambit</option>
-						<option value="Slav Defense">Slav Defense</option>
-						<option value="Semi-Slav Defense">Semi-Slav Defense</option>
-						<option value="Nimzo-Indian Defense">Nimzo-Indian Defense</option>
-						<option value="Queen's Indian Defense">Queen's Indian Defense</option>
-						<option value="Bogo-Indian Defense">Bogo-Indian Defense</option>
-						<option value="King's Indian Defense">King's Indian Defense</option>
-						<option value="Benoni Defense">Benoni Defense</option>
 						<option value="Benko Gambit">Benko Gambit</option>
-						<option value="London System">London System</option>
-						<option value="Catalan Opening">Catalan Opening</option>
-						<option value="Reti Opening">Réti Opening</option>
+						<option value="Benoni Defense">Benoni Defense</option>
 						<option value="Bird Opening">Bird Opening</option>
-						<option value="Polish Opening">Polish Opening</option>
-						<option value="Owen Defense">Owen Defense</option>
+						<option value="Bogo-Indian Defense">Bogo-Indian Defense</option>
+						<option value="Caro-Kann Defense">Caro-Kann Defense</option>
+						<option value="Catalan Opening">Catalan Opening</option>
 						<option value="Czech Defense">Czech Defense</option>
+						<option value="Dutch Defense">Dutch Defense</option>
+						<option value="English Opening">English Opening</option>
+						<option value="Four Knights Game">Four Knights Game</option>
+						<option value="French Defense">French Defense</option>
+						<option value="Italian Game">Italian Game</option>
+						<option value="Jobava London System">Jobava London System</option>
+						<option value="King's Gambit">King's Gambit</option>
+						<option value="King's Indian Defense">King's Indian Defense</option>
+						<option value="London System">London System</option>
+						<option value="Modern Defense">Modern Defense</option>
+						<option value="Nimzo-Indian Defense">Nimzo-Indian Defense</option>
+						<option value="Owen Defense">Owen Defense</option>
+						<option value="Petrov's Defense">Petrov's Defense</option>
+						<option value="Philidor Defense">Philidor Defense</option>
+						<option value="Pirc Defense">Pirc Defense</option>
+						<option value="Polish Opening">Polish Opening</option>
+						<option value="Queen's Gambit">Queen's Gambit</option>
+						<option value="Queen's Indian Defense">Queen's Indian Defense</option>
+						<option value="Reti Opening">Réti Opening</option>
+						<option value="Ruy Lopez">Ruy Lopez</option>
+						<option value="Scandinavian Defense">Scandinavian Defense</option>
+						<option value="Scotch Game">Scotch Game</option>
+						<option value="Semi-Slav Defense">Semi-Slav Defense</option>
+						<option value="Sicilian Defense">Sicilian Defense</option>
+						<option value="Slav Defense">Slav Defense</option>
+						<option value="Stonewall Attack">Stonewall Attack</option>
 						<option value="Trompowsky Attack">Trompowsky Attack</option>
 						<option value="Veresov Opening">Veresov Opening</option>
-						<option value="Jobava London System">Jobava London System</option>
-						<option value="Stonewall Attack">Stonewall Attack</option>
+						<option value="Vienna Game">Vienna Game</option>
 					</select>
 				</div>
 
@@ -107,6 +107,7 @@
 
 		<section id="details">
 			<p></p>
+			<div></div>
 			<button id="oe-reset" type="button" class="oe-btn">Reset</button>
 			<button id="oe-flip" type="button" class="oe-btn">Flip</button>
 		</section>
