Add win rate bar visualization and update related functionality

--- a/index.html
+++ b/index.html
@@ -106,13 +106,14 @@
 		</section>
 
 		<section id="details">
-			<div id="oe-opening-title" style="font-weight:700; color:white;"></div>
-			<div id="oe-opening-variant" style="opacity:.85; color:white;"></div>
+			<div id="oe-opening-title"></div>
+			<div id="oe-opening-variant"></div>
 			<pre id="oe-current-pgn"></pre>
+			<div id="oe-winrate-bar"></div>
 			<div class="wrap">
-					<button id="oe-reset" type="button" class="oe-btn">Reset</button>
-					<button id="oe-flip" type="button" class="oe-btn">Flip</button>
-				</div>
+				<button id="oe-reset">Reset</button>
+				<button id="oe-flip">Flip</button>
+			</div>
 		</section>
 
 		<section id="popularity"></section>
