Update footer to include individual contributor links

--- a/index.html
+++ b/index.html
@@ -121,9 +121,14 @@
 	</main>
 
 	<footer>
-		<p>Made by Dorian, Jessica, Maxime, Mustapha and Salim using data from <a
-				href="https://database.lichess.org/">Lichess</a>. Source code available on <a
-				href="https://github.com/maxime-antoine-dev/chess-viz">GitHub</a>.</p>
+		<p>Made by <a href="https://www.linkedin.com/in/dorian-tonnis/" target="_blank">Dorian</a>, <a
+				href="https://www.linkedin.com/in/ndiaye-jessica-a451592b6/" target="_blank">Jessica</a>, <a
+				href="https://www.linkedin.com/in/maxime-antoine-pro/" target="_blank">Maxime</a>,
+			<a href="https://www.linkedin.com/in/mustapha-el-abridi-987a23254/" target="_blank">Mustapha</a> and <a
+				href="https://www.linkedin.com/in/salim-chabchoub-a6200b224/" target="_blank">Salim</a> using data from
+			<a href="https://database.lichess.org/">Lichess</a>. Source code
+			available on <a href="https://github.com/maxime-antoine-dev/chess-viz">GitHub</a>.
+		</p>
 	</footer>
 </body>
 
