--- a/about.html
+++ b/about.html
@@ -32,22 +32,22 @@
 			<ul>
 				<li>Quelles sont les ouvertures les plus jouées et quels résultats donnent-elles ?</li>
 				<li>Quelle est la précision des joueurs lors de l'ouverture ?</li>
-				<li>En perdant l’avantage dans l’ouverture, peut-on revenir dans la partie ?</li>
+				<li>En perdant l'avantage dans l'ouverture, peut-on revenir dans la partie ?</li>
 			</ul>
 		</article>
 
 		<article>
-			<h2>À qui s’adresse la visualisation ?</h2>
+			<h2>À qui s'adresse la visualisation ?</h2>
 			<p>
-				La visualisation s’adresse aux joueurs d’échecs souhaitant progresser dans leurs ouvertures,
+				La visualisation s'adresse aux joueurs d'échecs souhaitant progresser dans leurs ouvertures,
 				construire un répertoire cohérent et mieux comprendre les tendances globales.
 			</p>
 			<ul>
-				<li><strong>Analyse stratégique :</strong> Quelles ouvertures sont les plus jouées selon l’Elo ?
+				<li><strong>Analyse stratégique :</strong> Quelles ouvertures sont les plus jouées selon l'Elo ?
 				</li>
 				<li><strong>Répertoire :</strong> Quelles défenses sont les plus fréquentes contre mon ouverture ?
 				</li>
-				<li><strong>Impact :</strong> À quel point l’ouverture influence-t-elle le résultat final ?</li>
+				<li><strong>Impact :</strong> À quel point l'ouverture influence-t-elle le résultat final ?</li>
 			</ul>
 		</article>
 
@@ -74,17 +74,22 @@
 			<h2>Travaux liés</h2>
 			<p>Plusieurs projets existants ont guidé notre réflexion :</p>
 			<ul>
-				<li><strong>ChessRoots</strong> – Exploration d’arbres interactifs.</li>
-				<li><strong>Chessbook</strong> – Outil pédagogique de construction de répertoire.</li>
-				<li><strong>Lichess Explorer</strong> – La référence en termes de base de données statistique.</li>
+				<li><strong>ChessRoots</strong> - Exploration d'arbres interactifs.</li>
+				<li><strong>Chessbook</strong> - Outil pédagogique de construction de répertoire.</li>
+				<li><strong>Lichess Explorer</strong> - La référence en termes de base de données statistique.</li>
 			</ul>
 		</article>
 	</main>
 
 	<footer>
-		<p>Made by Dorian, Jessica, Maxime, Mustapha and Salim using data from <a
-				href="https://database.lichess.org/">Lichess</a>. Source code available on <a
-				href="https://github.com/maxime-antoine-dev/chess-viz">GitHub</a>.</p>
+		<p>Made by <a href="https://www.linkedin.com/in/dorian-tonnis/" target="_blank">Dorian</a>, <a
+				href="https://www.linkedin.com/in/ndiaye-jessica-a451592b6/" target="_blank">Jessica</a>, <a
+				href="https://www.linkedin.com/in/maxime-antoine-pro/" target="_blank">Maxime</a>,
+			<a href="https://www.linkedin.com/in/mustapha-el-abridi-987a23254/" target="_blank">Mustapha</a> and <a
+				href="https://www.linkedin.com/in/salim-chabchoub-a6200b224/" target="_blank">Salim</a> using data from
+			<a href="https://database.lichess.org/">Lichess</a>. Source code
+			available on <a href="https://github.com/maxime-antoine-dev/chess-viz">GitHub</a>.
+		</p>
 	</footer>
 </body>
 
