Add project context section to about.html

--- a/about.html
+++ b/about.html
@@ -22,11 +22,19 @@
 		<div class="chess-divider">♟ ♞ ♜</div>
 
 		<article>
+			<h2>Contexte</h2>
+			<p>
+				Projet réalisé dans le cadre du cours de <strong>Visualisation de données</strong> de l'Université
+				Claude Bernard Lyon 1 (<a href="https://lyondataviz.github.io/teaching/lyon1-m2/2025/"
+					target="_blank">lyondataviz.github.io</a>).
+			</p>
+		</article>
+
+		<article>
 			<h2>Problématique</h2>
 			<p>
 				Notre projet vise à mieux comprendre le rôle de l'ouverture dans le résultat des parties d'échecs en
-				ligne,
-				ainsi que son impact sur la précision des joueurs.
+				ligne, ainsi que son impact sur la précision des joueurs.
 			</p>
 			<p>Nous cherchons notamment à répondre aux questions suivantes :</p>
 			<ul>
